--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About me</title>  
+    <title>About me</title> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
